--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,15 +35,15 @@ a:hover {
 	justify-content: space-between;
 	top: 0;
 	width: 100%;
-	margin-top: 40px;
+	margin-top: 0px;
 	margin-bottom: 10px;
 }
 .logo {
 	position: relative;
 	left: 0;
-	top: 20%;
+	top: 0;
 	width: 190px;
-	height: 50px;
+	height: 150px;
 	margin-left: auto;
 	margin-right: auto;
 }
